chenged design of all project, for encoder and vkfsys, for all pages with bootstrap 4

--- a/vkfDjango/apps/encoder/static/css/style.css
+++ b/vkfDjango/apps/encoder/static/css/style.css
@@ -39,7 +39,11 @@ body,form {
     #total-samples{
         background-color: #ffbae1;
     }
-
+    #card-header, #card-footer {
+        color: white;
+        background-color: #ccccff;
+        font-size: 18px;
+    }
     .hello-msg{
     font-size: 16px;
     color: black;
