--- a/vkfDjango/templates/vkfsys/for_add_hyps.html
+++ b/vkfDjango/templates/vkfsys/for_add_hyps.html
@@ -11,8 +11,8 @@
         <form action = "{% url 'vkfsys:add_hyps' ex_id %}" enctype="multipart/form-data" method="post">
             {% csrf_token %}
             <div class="card text-center">
-                <div class="card-header">
-                     Добавить гипотезы
+                <div class="card-header" id="card-header">
+                     ДОБАВИТЬ ГИПОТЕЗЫ
                 </div>
                 <div class="card-body">
                     <h5 class="card-title"></h5>
@@ -23,9 +23,9 @@
                         <input class="form-control " name="num_thr" type="number" placeholder="Количество потоков">
                         </div>
                 </div>
-                <div class="card-footer text-muted">
-                    <a class="btn btn-secondary" href="{% url 'vkfsys:ct_return' ex_id %}">Отмена</a>
-                    <button class="btn btn-secondary" type="submit">ОК
+                <div class="card-footer text-muted" id="card-footer">
+                    <a class="btn btn-outline-light" href="{% url 'vkfsys:ct_return' ex_id %}">Отмена</a>
+                    <button class="btn btn-outline-light" type="submit">ОК
                     </button>
                 </div>
             </div>
