--- a/vkfDjango/templates/vkfsys/results.html
+++ b/vkfDjango/templates/vkfsys/results.html
@@ -9,8 +9,8 @@
 <div class="container-fluid">
     <div class="d-flex justify-content-center">
             <div class="card text-center">
-                <div class="card-header">
-                    Результаты работы ВКФ-системы
+                <div class="card-header" id="card-header">
+                    РЕЗУЛЬТАТЫ РАБОТЫ ВКФ-СИСТЕМЫ
                 </div>
                 <div class="card-body">
                     <h5 class="card-title"></h5>
@@ -21,7 +21,7 @@
                       </ul>
 
                 </div>
-                <div class="card-footer text-muted">
+                <div class="card-footer text-muted" id="card-footer">
                 </div>
             </div>
         
