--- a/vkfDjango/templates/encoder/show_table.html
+++ b/vkfDjango/templates/encoder/show_table.html
@@ -8,25 +8,83 @@
         what_url = document.getElementById('have_url');
         back = document.getElementById('back');
         stroka_url = what_url.innerHTML
-        back.setAttribute('action', stroka_url);
+        back.setAttribute('href', stroka_url);
     };
 </script>
 
-<form id = 'back' action="#" enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    <button type="submit">Назад</button>
-</form>
-    {% if rows %}
+<script>
+    // When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
 
-        {% for row in rows %}
-            <p>{{row}}</p>
-        {% endfor %}
+function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("myBtn").style.display = "block";
+    } else {
+        document.getElementById("myBtn").style.display = "none";
+    }
+}
 
-    {% else %}
-         Строк нет
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+    document.body.scrollTop = 0; // For Safari
+    document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+} 
+</script>
+<nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample10" aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+
+<div class="collapse navbar-collapse">
+  <ul class="navbar-nav">
+    <li class="nav-item active">
+      <a class="nav-link" href="{% url 'user-page' %}">Мой профиль<span class="sr-only">(current)</span></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+    </li>
+    <li class="nav-item">
+        <a id = 'back' class="nav-link" href="#">Назад</a>
+      </li>
+  </ul>
+</div>
+<span class="hello-msg">Здравствуйте, {{request.user}}!</span>
+</nav>
+<br>
+<div class="container-fluid">
+<button onclick="topFunction()" id="myBtn" title="Go to top" >Вверх</button> 
+<table class="table table-hover table-bordered">
+    {% if names %} 
+        <thead>
+            <tr>
+            {% for name in names %}
+            <th scope="col">{{name}}</th>
+            {% endfor %}
+            </tr>
+        </thead>
     {% endif %}
+    <tbody>
+        {% if rows %}  
+            {% for row in rows %}
+            <tr>
+                <th scope="row">{{row.0}}</th>
+                        {% for el in row|slice:"1:"  %}
+                        <td>
+                            {{el}}
+                        </td>
+                        {% endfor %}
+            </tr>  
+            {% endfor %}
+        {% else %}
+            <tr>
+            Строк нет!
+            </tr>
+        {% endif %}
+    </tbody>
+</table>
+</div>
+<div id = 'have_url' hidden = 'true' >{{urlForAction}}</div>
 
-    <div id = 'have_url' hidden = 'true' >{{urlForAction}}</div>
     
 
 {% endblock %}
