--- a/vkfDjango/templates/accounts/delete_file.html
+++ b/vkfDjango/templates/accounts/delete_file.html
@@ -8,7 +8,7 @@
 		<div class="card card-body">
 
 
-			<p>Точно хотите удалить "{{file}}"?</p>
+			<p>Точно хотите удалить "{{file}}" пользователя {{file.user}}?</p>
 
 			<form action="{% url 'delete_file' file.id  %}" method="POST">
 				
