--- a/vkfDjango/templates/accounts/delete_sample.html
+++ b/vkfDjango/templates/accounts/delete_sample.html
@@ -8,7 +8,7 @@
 		<div class="card card-body">
 
 
-			<p>Точно хотите удалить "{{sample}}"?</p>
+			<p>Точно хотите удалить выборку "{{sample}}" типа: {{sample.fileSample_type}}, пользователя {{sample.user}}?</p>
 
 			<form action="{% url 'delete_sample' sample.id  %}" method="POST">
 				
